--- a/demo/app/app.css
+++ b/demo/app/app.css
@@ -1,9 +1,5 @@
 ﻿@import '~nativescript-theme-core/css/core.light.css';
 
-.preset-btn {
-    
-}
-
 .option-label {
     vertical-align: middle;
 }
@@ -14,4 +10,8 @@
 
 .option-value {
     vertical-align: middle;
+}
+
+Button {
+    padding: 0 10;
 }
